my third earnbadge commit

--- a/seemore.html
+++ b/seemore.html
@@ -50,7 +50,7 @@
 
 
         <main id="oneItem">
-            <div class="mm">
+            <!-- <div class="mm">
                 <h1 id="callh1"></h1>
                 <h4 id="callh4"></h4>
                 <div class="row">
@@ -59,56 +59,9 @@
                         <ul id="checked"></ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </main>
-        <section class="container">
-            <div class="why pt-5 mt-5">
-                <h1>Why Digital Credentials Over Physical Credentials?</h1>
-            </div>
-            <div class="port">
-                <div class="porta">
-                    <div>
-                        <span><img src="https://earnedbadge.netlify.app/why/portability.png" alt="">
-                            <span>Portability</span>
-                    </div>
-                    <div>
-                        <span><img src="https://earnedbadge.netlify.app/why/better-analysis.png" alt=""></span>
-                        <span>Better Analysts</span>
-                    </div>
-                    <div>
-                        <span><img src="https://earnedbadge.netlify.app/why/shift.png" alt=""></span>
-                        <span>Shift the focus to allow individuals display their skills in a way that better reflect
-                            their
-                            capabilities.</span>
-                    </div>
-                </div>
-                <div class="porta">
-                    <div>
-                        <span><img src="https://earnedbadge.netlify.app/why/digitalization.png" alt=""></span>
-                        <span>Digitalisation</span>
-                    </div>
-                    <div>
-                        <span><img src="https://earnedbadge.netlify.app/why/free-marketing.png" alt=""></span>
-                        <span>Free Marketing</span>
-                    </div>
-                </div>
-                <div class="porta">
-                    <div>
-                        <span><img src="https://earnedbadge.netlify.app/why/secure.png" alt=""></span>
-                        <span>Secured verification</span>
-                    </div>
-                    <div>
-                        <span><img src="https://earnedbadge.netlify.app/why/indestructible.png" alt=""></span>
-                        <span>Indestructible records</span>
-                    </div>
-                    <div>
-                        <span><img src="https://earnedbadge.netlify.app/why/more.png" alt=""></span>
-                        <span>more details</span>
-                    </div>
-                </div>
-
-            </div>
-        </section>
+      
     
     <footer>
         <div>
