My first earnbadge responsiveness commit

--- a/more.html
+++ b/more.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="more.css">
 </head>
 <body>
-    <section class="container">
+    <section class="container p-0">
 
         <nav>
             <div class="logo"><a href="">Logo</a></div>
@@ -72,7 +72,7 @@
                         capabilities.</span>
                 </div>
             </div>
-            <div class="porta">
+            <div class="porta me-4">
                 <div>
                     <span><img src="https://earnedbadge.netlify.app/why/digitalization.png" alt=""></span>
                     <span>Digitalisation</span>
@@ -105,7 +105,7 @@
         <i class="icofont-facebook"></i>
         <i class="icofont-linkedin"></i>
      </div>
-     <div>
+     <div class="pe-2">
         <h4>Company</h4>
         <h5>Partner with us</h5>
         <h5>FAQ</h5>
