See more complete media query commit

--- a/seemore.html
+++ b/seemore.html
@@ -82,7 +82,7 @@
         </div>
         <div>
             <h4>Subscribe to Newsletter</h4>
-           <div><input type="text" placeholder="Email address">
+           <div class="input"><input type="text" placeholder="Email address">
             <button class="btn">Subscribe</button>
         </div>
         </div>
