My fifth earnebadge commit

--- a/seemore.html
+++ b/seemore.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <section class="container">
+    <section class="container p-0">
 
         <nav>
             <div class="logo"><a href="">Logo</a></div>
